environments/prd/ ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toggle-ingress-prd
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx   # ou azure/application-gateway se usar AppGW
spec:
  rules:
    - host: prd.togglemaster.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                namespace: auth-service-prd
                port:
                  number: 8001
          - path: /flag
            pathType: Prefix
            backend:
              service:
                name: flag-service
                namespace: flag-service-prd
                port:
                  number: 8002
          - path: /targeting
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                namespace: targeting-service-prd
                port:
                  number: 8003
          - path: /evaluation
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                namespace: evaluation-service-prd
                port:
                  number: 8004
          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                namespace: analytics-service-prd
                port:
                  number: 8005
